# AutoBOARd

./: README.md  button.py  config.py  constants.py  main.py  pyproject.toml  robot.py
PathVisualizer/: main.py
trajectories/: __init__.py  blue.py  config.py  coords.py  coords_blue_three_balance.py  coords_blue_three_guard.py  coords_blue_three_no_guard.py  coords_red_three_balance.py  coords_red_three_guard.py  link_guard_blue.py
units/: __init__.py  path.py  screen.py
util/: trajectory_estimator.py  trajectory_generator.py
